deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-model-telecom-deployment
spec:
  selector:
    matchLabels:
      app: churn-model-telecom
  replicas: 2
  template:
    metadata:
      labels:
        app: churn-model-telecom
    spec:
      containers:
      - name: churn-model-telecom
        image: deadcomedian/churn_model_telecom:202301181931_9931329556cebf580164610775652e2a623b1997
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
