service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-model-telecom-service
spec:
  selector:
    app: churn-model-telecom
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
  type: LoadBalancer
