ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churn-model-telecom-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
#  - host: 95.213.247.120
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: churn-model-telecom-service
            port: 
              number: 80
